--- a/languages/epfl-diploma-verification-fr_FR.po
+++ b/languages/epfl-diploma-verification-fr_FR.po
@@ -16,15 +16,15 @@ msgstr ""
 
 #. Name of the student
 msgid "graduateName"
-msgstr "Nom du diplômé"
+msgstr "Nom(s) du diplômé"
 
 #. First name of the student
 msgid "graduateFirstName"
-msgstr "Prénom du diplômé"
+msgstr "Prénom(s) du diplômé"
 
 #. Surname of the student
 msgid "graduateSurname"
-msgstr "Nom du diplômé"
+msgstr "Nom(s) du diplômé"
 
 #. Document number
 msgid "documentNumber"
@@ -32,11 +32,11 @@ msgstr "Numéro du diplôme"
 
 #. First name of the student
 msgid "graduateFirstNamePlaceHolder"
-msgstr "Prénom..."
+msgstr "Prénom(s)..."
 
 #. Surname of the student
 msgid "graduateSurnamePlaceHolder"
-msgstr "Nom..."
+msgstr "Nom(s)..."
 
 #. Document number
 msgid "documentNumberPlaceHolder"
